# tlib

./: .gitignore  CMakeLists.txt
include/tlib/: core.hpp  lib.hpp  other.hpp
src/: core.cpp  lib.cpp  other.cpp
